# url-shortener

./: README.md  alembic.ini  identifier.sqlite  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 85654d7c787f_initial_migration.py  ea68b781d75b_unique_short_url.py
controllers/redirect/: redirect_url.py
controllers/shortener/: shorten_url.py
core/: config.py  database.py  fastapi.py
models/: urls_model.py
proxies/: redis.py
routers/: __init__.py  redirect_url.py  shorten_url.py
schemas/_in/: shorten_url.py
services/: redirect.py
tests/: redirect_url.py  shorten_url.py
