[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Maedeh Shahabi <maedeh.shahabi@karnameh.ir>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sentry-sdk = "^2.17.0"
sqlmodel = "^0.0.22"
alembic = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
